src/style/main.scss
@import url('https://use.fontawesome.com/releases/v5.7.1/css/all.css');
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@import './variables.scss';

* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
}

html,
body {
  width: 100%;
  height: 100%;
  font-family: 'Roboto', sans-serif;
}

#app {
  width: 100%;
}

h1,h2,h3,h4,h5{
  text-transform: uppercase;
}
a:link,
a:visited {
  text-decoration: none;
  color: $text-white;
}
button {
  background-color: $btn-orange;
  text-transform: uppercase;
  padding: 10px 20px;
  color: $text-white;
  font-weight:900;
  text-transform:uppercase;
  height: 60px;
  width: 240px;
  border:none;
}
button:hover{
  background-color: $btn-hover;
  color: $text-black;
}

input[type='text']:focus,
textarea:focus {
  outline: none;
}

.hide {
  display: none;
}

.go-top{
  background-color: $bkg-no-pure-white;
  border-radius: 100%;
  width: 50px;
  height: 50px;
  padding: 10px;
  position: fixed;
  bottom: 20px;
  right: 40px;
  cursor: pointer;
  img{
    width: 100%;
    height: 100%;
    object-fit: contain;
  }
}

